--- a/src/main/resources/jdbc.properties
+++ b/src/main/resources/jdbc.properties
@@ -1,5 +1,5 @@
 username=root
-password=123456
+password=root
 url=jdbc:mysql://localhost:3306/mvideo?useUnicode=true&characterEncoding=utf8&useSSL=false
 driverClassName=com.mysql.jdbc.Driver
 initialSize=5
