添加Video、VideoType、History、Collection DAO层、添加HistoryDo、CollectionDO(用于页面展示)、修改DAO层结构 取消dao.impl.impl

--- a/src/main/resources/jdbc.properties
+++ b/src/main/resources/jdbc.properties
@@ -1,5 +1,5 @@
 username=root
-password=root
+password=s8480221
 url=jdbc:mysql://localhost:3306/mvideo?useUnicode=true&characterEncoding=utf8&useSSL=false
 driverClassName=com.mysql.jdbc.Driver
 initialSize=5
