添加页面 更改url路径 添加VideoServlet

--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -20,4 +20,13 @@
         <servlet-name>UserServlet</servlet-name>
         <url-pattern>/UserServlet</url-pattern>
     </servlet-mapping>
+
+    <servlet>
+        <servlet-name>VideoServlet</servlet-name>
+        <servlet-class>controller.VideoServlet</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>VideoServlet</servlet-name>
+        <url-pattern>/VideoServlet</url-pattern>
+    </servlet-mapping>
 </web-app>
