修改后台登录界面，实现管理员管理功能

--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -29,4 +29,13 @@
         <servlet-name>VideoServlet</servlet-name>
         <url-pattern>/VideoServlet</url-pattern>
     </servlet-mapping>
+
+    <servlet>
+        <servlet-name>ManagerServlet</servlet-name>
+        <servlet-class>controller.ManagerServlet</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>ManagerServlet</servlet-name>
+        <url-pattern>/ManagerServlet</url-pattern>
+    </servlet-mapping>
 </web-app>
