更新搜索页、视频播放页

--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -31,6 +31,24 @@
     </servlet-mapping>
 
     <servlet>
+        <servlet-name>HistoryServlet</servlet-name>
+        <servlet-class>controller.HistoryServlet</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>HistoryServlet</servlet-name>
+        <url-pattern>/HistoryServlet</url-pattern>
+    </servlet-mapping>
+
+    <servlet>
+        <servlet-name>CollectionServlet</servlet-name>
+        <servlet-class>controller.CollectionServlet</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>CollectionServlet</servlet-name>
+        <url-pattern>/CollectionServlet</url-pattern>
+    </servlet-mapping>
+
+    <servlet>
         <servlet-name>ManagerServlet</servlet-name>
         <servlet-class>controller.ManagerServlet</servlet-class>
     </servlet>
