--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -38,4 +38,13 @@
         <servlet-name>ManagerServlet</servlet-name>
         <url-pattern>/ManagerServlet</url-pattern>
     </servlet-mapping>
+
+    <servlet>
+        <servlet-name>UploadServlet</servlet-name>
+        <servlet-class>controller.UploadServlet</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>UploadServlet</servlet-name>
+        <url-pattern>/UploadServlet</url-pattern>
+    </servlet-mapping>
 </web-app>
