--- a/pom.xml
+++ b/pom.xml
@@ -105,6 +105,11 @@
             <scope>provided</scope>
         </dependency>
 
+        <dependency>
+            <groupId>com.google.zxing</groupId>
+            <artifactId>javase</artifactId>
+            <version>3.4.0</version>
+        </dependency>
 
     </dependencies>
 
