--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -119,4 +119,13 @@
         <servlet-name>VideoTypeServlet</servlet-name>
         <url-pattern>/VideoTypeServlet</url-pattern>
     </servlet-mapping>
+
+    <servlet>
+        <servlet-name>LogoutServlet</servlet-name>
+        <servlet-class>controller.LogoutServlet</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>LogoutServlet</servlet-name>
+        <url-pattern>/LogoutServlet</url-pattern>
+    </servlet-mapping>
 </web-app>
